--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 streamlit==1.28.1
-pandas==2.0.3
-numpy==1.24.3
+pandas>=2.0
+numpy<=1.25.1
 scikit-learn==1.3.0
 xgboost==2.0.0
-tensorflow==2.14.0
 plotly==5.17.0
 requests==2.31.0
-typing-extensions==4.9.0
+typing-extensions>=4.9.0
